[package]
name = "model_to_image"
version = "0.1.0"
edition = "2024"

[dependencies]
russimp = { version = "3.2", features = ["prebuilt"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
nalgebra = "0.34"
anyhow = "1.0"
rand = "0.9"

clap = { version = "4.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[lib]
name = "model_to_image"
path = "src/lib.rs"

[[bin]]
name = "model_to_image"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'
