[package]
name = "model_to_image"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/4tkbytes/dropbear-engine"
readme = "README.md"
description = "A way to convert a 3D model to an image to use with thumbnails and previews"


[dependencies]
russimp-ng = { version = "3.2", features = ["static-link"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
nalgebra = "0.34"
anyhow = "1.0"
rand = "0.9"

clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[lib]
name = "model_to_image"
path = "src/lib.rs"

[[bin]]
name = "model_to_image"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'
